[NO-JIRA] Fix wrapping nav-bar height (#427)

--- a/src/NavigationBar/navigation-bar.scss
+++ b/src/NavigationBar/navigation-bar.scss
@@ -38,6 +38,12 @@
     @include bpk-breakpoint-mobile {
       height: 5rem;
     }
+
+    &--wrapping {
+      @include bpk-breakpoint-mobile {
+        height: 6.59rem;
+      }
+    }
   }
 
   &__mobile-container {
